tests/fixtures/pass/inherent_temporary_mut_resource_receiver.sali
let Resource = struct(value: i32)

extend Resource {
  let increment(mut borrow self)(): i32 = {
    self.value = self.value + 1
    self.value
  }
}

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let checked = 1 / self.value
    self.value = 0
  }
}

let main(): i32 = Resource(41).increment()
