tests/fixtures/fail/add_trait_missing_impl.sali
let Add(Rhs: type) = trait {
  let Output: type
  let add(move self)(move rhs: Rhs): Output
}

let Number = struct(value: i32)

let main(): i32 = {
  let answer = Number(40) + Number(2)
  answer.value
}
